plang/testing/logs/false-incorrect/180/program180.p.p
bEo5E :- (((fWq; o (RVH) C (ZpDFT) (nGacT (e mP a67Mg) P3n), zEY))).


jHE (QffMP) QTgE4 (Rj) :- (yfM (AL) (eeOW Te (ry) (HlG)) (PlaB), (oiU6p (wrg c80W (jW1 (sS Cm) (S) (cf)) (Mj)) Coq (gtXf jxjKQ) (q BBA (L))), (utD1 (BF67A) AR), ((pETsh (t fS (D8) (iPQ2) r3PWR), qmSw (oJcJ Kn7Ak (eF (dgyO0 (klg (X) (AAlq)))) (jfz mX sXTN OoP)) sTivt))).

y plx :- b1 (MczB) LXM.


j3WU (Jc) (oLQA (sevH eB (l (A7))) (e3 v7K X (al7 PL I (zjt (Vc)))) (C)) (UvQg) :- v4.


gbw O (eCLuC (yKE3 (di (G92) uXoz (to2X (SAE))) ywT (jBQi) bAzf0) t) sq M9629.

? nQk n (TtTSI) vag; (ex (nF) (UtMG) (Rpp) dHE93); (r4x hm (fCy) (eeIQI jX) WdF); iRPk l.


